S-58373 added help hint.

--- a/src/main/webapp/help-projectSettings.html
+++ b/src/main/webapp/help-projectSettings.html
@@ -1,1 +1,3 @@
-Integration for the VersionOne server. Track information into VersionOne about builds.
+<div>
+    If configured, Jenkins will provide build information to VersionOne.  If a compatible SCM system is in use a changeset will also be created.
+</div>
